# nav2_social_mpc_controller

./: CMakeLists.txt  README.md  critics.md  package.xml
include/nav2_social_mpc_controller/: obstacle_distance_interface.hpp  optimizer.hpp  path_trajectorizer.hpp  people_interface.hpp  sfm.hpp  social_mpc_controller.hpp  trajectory_memory.hpp  update_state.hpp
include/nav2_social_mpc_controller/critics/: agent_angle_cost_function.hpp  angle_cost_function.hpp  curvature_cost_function.hpp  distance_cost_function.hpp  goal_align_cost_function.hpp  obstacle_cost_function.hpp  proxemics_cost_function.hpp  social_work_cost_function.hpp  velocity_cost_function.hpp  velocity_feasibility_cost_function.hpp
include/nav2_social_mpc_controller/tools/: path_handler.hpp  type_definitions.hpp
params/: obst_only_parameters_in_benchmark.yaml  params.yaml  soc_work_obst_parameters_in_benchmark.yaml
src/: obstacle_distance_interface.cpp  optimizer.cpp  path_handler.cpp  path_trajectorizer.cpp  people_interface.cpp  social_mpc_controller.cpp  test_path_trajectorizer.cpp
src/critics/: agent_angle_cost_function.cpp  angle_cost_function.cpp  curvature_cost_function.cpp  distance_cost_function.cpp  goal_align_cost_function.cpp  obstacle_cost_function.cpp  proxemics_cost_function.cpp  social_work_cost_function.cpp  velocity_cost_function.cpp  velocity_feasibility_cost_function.cpp
